@@ -9,6 +9,7 @@
 - Fix adding routes twice in active_scaffold generator
 - Restore old behavior for action_link's security_method, ignore_method already hides the link 
 - Add data-cancel-refresh to action links, so nested scaffold's behaviour can be applied to other action links and when adapter is closed row will be refreshed.
+- fix support for tableless models in rails >= 3.2.5
 
 = 3.2.12
 - improve support for tableless models, add support for count
